# AutoCOVID

./: .gitignore  AutoCOVID.cabal  AutoPCR2.cabal  CHANGELOG.md  cabal.project.local
app/: Main.hs
src/: AddrList.hs  MyLib.hs
