cabal-version:      2.4
name:               AutoCOVID
version:            0.1.0.0
synopsis:

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            NONE
author:             Li, Yi-Jui
maintainer:         alexlee800121@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

common shared
    default-language: Haskell2010
    build-depends:
        base,
        webdriver-w3c ^>=0.0.3,
        -- fused-effects,
        text,
        process,
        transformers

    default-extensions:
        OverloadedStrings,
        TypeApplications 

library
    import: shared
    exposed-modules:  MyLib

    -- Modules included in this library but not exported.
    other-modules:
        AddrList

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:

    hs-source-dirs:   src

executable AutoPCR2
    import: shared

    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:
    build-depends: AutoPCR2
    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    hs-source-dirs:   app
